<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@mipmap/a"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.TombulsCaseSimulator.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center_vertical|center|clip_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fatherAll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"

        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAvatar2"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                ads:srcCompat="@mipmap/avatar0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text="TextView"
                    android:textAlignment="gravity"
                    android:textColor="@color/textcolor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtWallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/textcolor" />

                <TextView
                    android:id="@+id/txtInventory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="IV"
                    android:textColor="@color/textcolor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgLevel"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:elevation="1dp"
                        ads:srcCompat="@drawable/ic_menu_camera" />

                    <TextView
                        android:id="@+id/txtLevel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Level"
                        android:textColor="@color/textcolor" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:columnCount="1"
            android:elevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/goInventory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menuinventory"
                    android:textColor="@color/textcolor" />

                <Button
                    android:id="@+id/goOpenCase"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menuopencase"
                    android:textColor="@color/textcolor" />

                <Button
                    android:id="@+id/goTradeUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menutradeup"
                    android:textColor="@color/textcolor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/goJackpot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menujackpot"
                    android:textColor="@color/textcolor" />

                <Button
                    android:id="@+id/goCrush"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    android:layout_rowWeight="1"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menucrash"
                    android:textColor="@color/textcolor" />

                <Button
                    android:id="@+id/goMineSweeper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menumine"
                    android:textColor="@color/textcolor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/goFlipCoin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menuflipcoin"
                    android:textColor="@color/textcolor" />

                <Button
                    android:id="@+id/goDice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"
                    android:layout_rowWeight="1"
                    android:layout_weight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menudice"
                    android:textColor="@color/textcolor" />

                <Button
                    android:id="@+id/goSettings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:background="@drawable/buttonshape"
                    android:text="@string/menu_settings"
                    android:textColor="@color/textcolor" />

            </LinearLayout>

        </GridLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/AD_BANNER" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/fatherChanceUserName"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:background="@mipmap/background"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:gravity="fill_vertical|center"
            android:text="@string/enterUsername"
            android:textAlignment="gravity"
            android:textColor="@color/textcolor"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/enterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="16"
            android:gravity="center_vertical|center"
            android:inputType="textPersonName|textFilter"
            android:maxLength="16"
            android:text="Player"
            android:textAlignment="gravity"
            android:textColor="@color/textcolor"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonChangeUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="@string/okey"
                android:textColor="@color/textcolor" />

            <Button
                android:id="@+id/buttonChanceUserNameCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="@string/cancel"
                android:textColor="@color/textcolor" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
