<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/a"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.TombulsCaseSimulator.TradeUp"
    tools:showIn="@layout/app_bar_trade_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_weight="8"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/wallet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:gravity="right|center"
            android:textColor="@color/textcolor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@android:drawable/screen_background_dark_transparent">

            <TextView
                android:id="@+id/oTxtNoItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gainBackground"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/noitem"
                android:textColor="@color/textcolor"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/oGLOptions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/area3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:id="@+id/area4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <LinearLayout
                    android:id="@+id/area5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/oLLInventoryFather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gainBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/oImageViewBack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    app:srcCompat="@mipmap/back" />

                <GridLayout
                    android:id="@+id/oGVInventory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:columnCount="3" />

                <ImageView
                    android:id="@+id/oImageViewNext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    app:srcCompat="@mipmap/forwad" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/oTextViewSelectedCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0/10"
            android:textColor="@color/textcolor"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/oButtonCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="@string/cancel"
                android:textColor="@color/textcolor" />

            <Button
                android:id="@+id/oButtonPlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.7"
                android:background="@drawable/buttonshape"
                android:text="@string/play"
                android:textColor="@color/textcolor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/oGLSelected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/area1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:id="@+id/area2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gainItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/gainBackground"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gain"
            android:textColor="@color/textcolor"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/oImageViewStattrak"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="120dp"
                app:srcCompat="@mipmap/stattrak" />

            <ImageView
                android:id="@+id/oImageViewBackground"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:srcCompat="@mipmap/ghct" />

            <ImageView
                android:id="@+id/oImageView"
                android:layout_width="180dp"
                android:layout_height="180dp"
                app:srcCompat="@mipmap/dice6" />
        </RelativeLayout>

        <TextView
            android:id="@+id/oTxtNameSkin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/textcolor"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/oTxtQualityPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/textcolor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/oButtonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="@string/addEnvetory"
                android:textColor="@color/textcolor" />

            <Button
                android:id="@+id/oButtonSell"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="Button"
                android:textColor="@color/textcolor" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
